--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@angular/material": "^20.1.4",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@types/lodash-es": "^4.17.12",
+    "lodash-es": "^4.17.22",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
